fix the bug of text overlapping on download link

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -66,6 +66,7 @@ h2 small
   margin: 0
   white-space: nowrap
   width: 0
+  padding-top: 5px
 
 #download-link
   width: 50%
